Basic dice rolling

--- a/DiceRoll.cabal
+++ b/DiceRoll.cabal
@@ -67,7 +67,7 @@ executable DiceRoll
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    base ^>=4.18.3.0, mtl, random
 
     -- Directories containing source files.
     hs-source-dirs:   app
